PZS-NG CHANGELOG
----------------

v1.2.0  --> 1.2.x :
		- Add TVMaze sitebot plugin, revamped TVRage plugin by MrCode.
		- ^--- 2016 ---^
		- Fix disabling of BADMSGINVITE announce.
		- Add explanation for vars in all triggers, WELCOME and (BAD)MSGINVITE
		- Add %color explanation and extra info for BNC_* announces
		- Add explanation for usable vars in FREE and FREE-DEV
		- Add announce for users with email as pass and using an incorrect one.
		- Add 44 extra genres defined by Winamp
		- Add announce for glftpd's new logline concerning logins with invalid usernames and adjust existing one for bad passwords.
		- Fix samplechecking for fileexts not being 3 chars long. Fix some memleaks and other bugs at the same time.
		- Fix incorrect bitrate (and other values) reported for .mp3 files (thanks to bizzyfunk for noticing)
		- Fix "-e" echo when compiling (patch by tittof)
		- Add sample_types option to be used instead of video_types to define those extensions present in sampledirs
		- Split del_completebar into as many equivalents as *_completebar
		- Add jpeg to allowed_types and 2015 to allowed_years
		- Make IRC-triggers configurable in ngBot: now you can easily disable a command
		  or add more triggers for it and eggdrop-perms can be set for them.
		  Changed files: ngBot.conf.defaults, ngBot.tcl, modules/glftpd.tcl
		  See ngBot.conf.defaults for new options and usage instructions
		- Add prooffix to default missing_sample_check_ignore_list
		- Fixed issue #9 where %u_tagline showed the user's FLAGS for the INVITE-event
		- ^--- 2015 ---^
		- Fixed crc calculation for the slice-methods on BSD and OSX (thanks to Hujer)
		- Fixed compilation on BSD and OSX (thanks to tittof and Hujer)
		- Prettified output at --(full)config of status_bar_type and crc_algo
		- Fixed bugs in invite.sh outputting "-e" and bad timeformat (fixed by rbt)
		- Implemented slice-by-4/8 based on Stephan Brumme's cpp code.
		  Introducing a new config option: crc_algo where you can decide